--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,9 +38,12 @@ jobs:
       - name: Build
         working-directory: ./web
         run: npm run build
-
-      - name: Setup Pages
-        uses: actions/configure-pages@v4
+        
+       # SPA fallback so direct URL refreshes work on Pages
+      - name: Add SPA 404 fallback & disable Jekyll
+        run: |
+          cp -f dist/index.html dist/404.html
+          touch dist/.nojekyll
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
