--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,8 +27,8 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
-          cache: 'npm'
+          node-version: 20
+          cache: npm
           cache-dependency-path: web/package-lock.json
 
       - name: Install dependencies
@@ -38,7 +38,7 @@ jobs:
       - name: Build
         working-directory: ./web
         run: npm run build
-        
+
        # SPA fallback so direct URL refreshes work on Pages
       - name: Add SPA 404 fallback & disable Jekyll
         run: |
