--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,9 +41,10 @@ jobs:
 
        # SPA fallback so direct URL refreshes work on Pages
       - name: Add SPA 404 fallback & disable Jekyll
+        working-directory: ./web
         run: |
-          cp -f dist/index.html dist/404.html
-          touch dist/.nojekyll
+          cp -f build/client/index.html build/client/404.html
+          touch build/client/.nojekyll
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
